# omniverse

./: .gitignore  Protótipo Super App Nexora V24.8.html  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
apps/: README.md
apps/admin-god-mode/: index.html  package-lock.json  package.json
apps/mobile/: README.md
apps/super-app-flutter/: README.md  pubspec.yaml
apps/watch/: README.md
apps/web/: README.md
core/: Cargo.toml  README.md
core/src/: main.rs
core/static/: admin.html  app.js  downloads.html  index.html  infographic.html  investors.html  styles.css
core/static/downloads/: APK-README.txt  nexora-mobile.apk  nexora-smartwatch.apk
db/docs/: data-dictionary.md  entity-link-matrix.md
db/sql/: 00_schema.sql  01_reference_codes.sql  02_seed_master.sql  03_views_360.sql  04_indexes.sql  05_integrity_checks.sql  06_memory_profile.sql  99_selftest.sql  seed.sql
docs/: proxy-firewall-safety.md
docs/manuals/: manual-admin.html  manual-servidor-local.html  manual-smartphone.html  manual-usuario.html
infra/: README.md
infra/nginx/: nginx.conf
nginx/: nginx.conf
scripts/: bootstrap.ps1  build_android.sh  build_web.sh  build_windows.bat  check-memory-budget.ps1  create-remote-tester.ps1  db-bootstrap.ps1  db-reset.ps1  db-validate.ps1  down.ps1  healthcheck.ps1  nuke_and_reset.sh  publish-remote.ps1  remote-test-pack.ps1  reset.ps1  revoke-remote-tester.ps1  setup_master.sh  start_nexora.sh  stop_nexora.sh  uninstall.ps1  unpublish-remote.ps1  up.ps1  validate-host-internet.ps1
(+89 files in other folders)
